# Factrix

./: .gitignore  Factrix_Report.md  README.md  app.py  pyproject.toml  run_debug.py
.agents/: ORIGINAL_REQUEST.md
.agents/auditor_m1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/auditor_m1_verify/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/auditor_m2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/auditor_m3/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_m1_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_m1_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md  verify_alpha_beta.py
.agents/challenger_m1_verify/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_m2_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_m2_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_m3_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_m3_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/explorer_0/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/explorer_m1_1/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  (+2 more)
src/: __init__.py  config.py
tests/: conftest.py  test_alpha_beta.py  test_alpha_beta_stress.py  test_data_layer.py  test_e2e_app.py  test_engine.py  test_infra.py  test_m2_adversarial.py  test_m3_adversarial.py  test_ui.py  test_ui_components.py
(+87 files in other folders)
